...
        switch self {
        case .idle:
            "Idle"
        case .connecting:
            "Connecting"
        case .attached:
            "Attached"
        case .interrupted:
            "Interrupted"
        case .detached:
            "Detached"
        case .disconnected:
            "Disconnected"
        case .reconnecting:
            "Reconnecting"
        case .closing:
            "Closing"
...
